# goit-pythonweb-hw-10

./: .exemple.env  alembic.ini  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 54cffc78f44d_add_user.py  df866285e61a_initial_migration.py  e7100ca75dbe_add_to_model_user_filed_confirmed.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  mail.py  users.py
