[tool.poetry]
name = "contacts-fastapi"
version = "0.1.0"
description = "App contacts"
authors = ["apelsin16"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
pydantic = "^2.11.1"
asyncpg = "^0.30.0"
alembic = "^1.15.2"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
